- Utility methods, dateStringISO, dateStringFileMaker and timeString, are defined in INTERMediatorLib.
- Add Dockerfile for CircleCI.
- Be able to customize a style of the file uploading area when using the file upload component.
- LDAPAuth class can report errors.
- INTER-Mediator version can be described in the 'metadata.json' file, and dist-docs/build.sh
  can update the metadata.json.
- All header description of source files are updated, and build.sh was adapted them.
- Update buster.js and package.json for unit testing.
- [BUG FIX] Fix detection of params.php file.
- [BUG FIX] Fix loading DB_TextFile class. The affected version is 5.2 only.
- [BUG FIX] Modify INTERMediator.totalRecordCount after IMLibPageNavigation.deleteRecordFromNavi method.
- [BUG FIX] Fix detecting the Post Only Mode when the value of the enclosure's data-im-control element
  is "enclosure post".

Ver.5.2 (August 24, 2015)
- Record Copying is supported for single record, and also with associated records for PDO.
- Authentication with an LDAP user.
- Handle some operators of conditions ('!=', '>', '>=', '<', '<=') as valid when using FileMaker 
  Server.
- The "button-names" key in a context of definition file supports to customize the button names.
- The list aggregate function was introduced.
- Add IMLIbUI.validation() as a public method.
- INTER-Mediator-Server VM can update with just "git pull origin master" command.
- DataConverter classes for currency and number was improved in case of missing locale information.
- The following 4 methods can be defined and they are going to be called when the page moves to
  the master/detail navigation. All function can have two parameters that are referring the master
  and detail contexts.
      INTERMediatorOnPage.naviBeforeMoveToDetail
      INTERMediatorOnPage.naviAfterMoveToDetail
      INTERMediatorOnPage.naviBeforeMoveToMaster
      INTERMediatorOnPage.naviAfterMoveToMaster